--- a/web/Design.css
+++ b/web/Design.css
@@ -1,50 +1,89 @@
 body{
+    margin:0 0 0 0;
     background-color: #AAAAAA;
+
 }
-form {
+form{
     margin: 0 0 0 0;
 }
-
-.div {
+#window{/* 仮想親テーブル */
+    width:100%;
+    background-color: rgba(0,0,0,0);
 }
-
-h1{
-    margin:10px 40%;
-    width: 10em;
+#subwindow{
+    width:100%;
+    background-color: rgba(0,0,0,0);
 }
-
-.btn_1 {
-    margin: 10px 10px 10px 10px;
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    color: #AA5500;
-    width: 130px;
-    height: 50px;
-    line-height: 25px;
-    border-radius: 5px;
+.a-box{/*仮想親テーブルのTOPセル*/
+    width:100px;
+    vertical-align: top;
+}
+.b-box{/*仮想親テーブルのBOTTOMセル*/
+    width:100px;
+    vertical-align: bottom;
+}
+.c-box{/*仮想親テーブルのmainセル*/
     text-align: center;
     vertical-align: middle;
+}
+.ta-box{
+    width:50%;
+    height: 50px;
+
+}
+.tb-box{
+    width: 50%;
+    height: 50px;
+    text-align: right;
+}
+.inline-box{
+    display: inline-block;
+    vertical-align: middle;
+}
+.inline-link{
+    display: inline;
+    vertical-align: middle;
+}
+
+
+h1{
+    margin-top:50px;
+    vertical-align: middle;
+    width: 100%;
+}
+
+.btn_1{
+    margin:20px 10px;
+    width:100px;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 20px;
+    color: #83C4CF;
+    line-height: 35px;
+    border-radius: 5px;
+    text-align: center;
     overflow: hidden;
     font-weight: bold;
     background-image: -webkit-linear-gradient(#75A9FF 0%, #DD0000 100%);
-    background-image: linear-gradient(#C6E9FC 0%, #9CDAFD 100%);
+    background-image: linear-gradient(#CFCFCF 0%, #BBBBBB 100%);
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.28);
 }
-
-.btn_1:active { /*押したとき*/
+.btn_1:active{/*押したとき*/
     -ms-transform: translateY(2px);
     -webkit-transform: translateY(2px);
-    transform: translateY(2px); /*沈むように*/
+    transform: translateY(2px);/*沈むように*/
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
-    background-image: -webkit-linear-gradient(#00ff7f 0%, #005FFF 100%);
-    background-image: linear-gradient(#9CDAFD 0%, #60A8BF 100%); /*グラデーションを明るく*/
+    background-image: -webkit-linear-gradient(#999999 0%, #888888 100%);
+    background-image: linear-gradient(#BBBBBB 0%, #9A9A9A 100%);/*グラデーションを明るく*/
 }
 
 .btn_2 {
+    margin:5px 5px;
+    width:200px;
+    height: 100px;
+    font-size: 20px;
     display: inline-block;
-    padding: 25px 50px;
     text-decoration: none;
     background: #f7f7f7;
     border-left: solid 6px #EEEE88; /*左線*/
@@ -59,15 +98,17 @@ h1{
 }
 
 .btn_3 {
+    width: 150px;
+    height: 80px;
+    margin:50px 5px;
+    font-size: 20px;
     display: inline-block;
-    padding: 0.5em 1em;
     text-decoration: none;
     color: #000000;
     border: double 6px #A00000;
     border-radius: 3px;
     transition: .4s;
-    background-color: #FF1010;
-    background-image: -webkit-linear-gradient(#DCDCDC, #0000BB 100%);
+    background-image: -webkit-linear-gradient(#CFCFCF 0%, #BBBBBB 100%);
     box-shadow: 2.5px 3.5px 0px rgba(0, 0, 0, 0.30);
 }
 
@@ -77,45 +118,50 @@ h1{
     -webkit-transform: translateY(2px);
     transform: translateY(2px); /*沈むように*/
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
-    background-image: -webkit-linear-gradient(#FFD700 0%, #FFD700 100%);
+    background-image: -webkit-linear-gradient(#BBBBBB 0%, #9A9A9A 100%);
 
 }
 
 .btn_4 {
+    width: 150px;
+    height: 80px;
+    margin:5px 5px;
+    font-size: 20px;
+    vertical-align: middle;
     display: inline-block;
-    padding: 0.5em 1em;
     text-decoration: none;
     color: #000000;
-    border: double 6px #FFFF10;
+    border: double 6px #020138;
     border-radius: 3px;
     transition: .4s;
-    background-color: #10FF10;
-    background-image: -webkit-linear-gradient(#DCDCDC, #0000BB 100%);
+    background-image: -webkit-linear-gradient(#CFCFCF 0%, #BBBBBB 100%);
     box-shadow: 2.5px 3.5px 0px rgba(0, 0, 0, 0.30);
 }
 
 .btn_4:active { /*押したとき*/
-    border: double 4px #FFFF10;
+    border: double 4px #020138;
     -ms-transform: translateY(2px);
     -webkit-transform: translateY(2px);
     transform: translateY(2px); /*沈むように*/
-    background-color: #10FF10;
+    background-color: #020138;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
-    background-image: -webkit-linear-gradient(#10FF10 0%, #10FF10 100%);
+    background-image: -webkit-linear-gradient(#BBBBBB 0%, #9A9A9A 100%);
 }
 
 .btn_5 {
-    position: relative;
+    width: 150px;
+    height: 80px;
+    font-size: 16px;
+    margin:5px 5px;
     display: inline-block;
-    padding: 0.25em 0.5em;
     text-decoration: none;
-    background: #DDDDFF; /*背景色*/
+    background: #CFCFCF; /*背景色*/
     color: #00BCD4; /*=背景色*/
     box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2);
     border-bottom: solid 2px #118e9e;
     border-radius: 4px;
     font-weight: bold;
-    text-shadow: -1px -1px rgba(255, 255, 255, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+    text-shadow: -1px -1px rgba(207, 207, 207, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
 }
 
 .btn_5:active { /*押したとき*/
@@ -124,23 +170,33 @@ h1{
     text-shadow: -1px -1px rgba(255, 255, 255, 0.3), 1px 1px rgba(0, 0, 0, 0.3);
 }
 .btn_6{
+    margin:5px 5px;
+    display: inline-block;
+    padding: 4px 8px;
+    border-radius: 25px;
+    text-decoration: none;
+    color: #FFF;
+    background-image: -webkit-linear-gradient(45deg, #FFC107 0%, #ff8b5f 100%);
+    background-image: linear-gradient(45deg, #A9A9A9 0%, #B9B9B9 100%);
+    transition: .4s;
 
 }
-btn:active{
-
+.btn_6:active{/*押したとき*/
+    background-image: -webkit-linear-gradient(45deg, #FFC107 0%, #f76a35 100%);
+    background-image: linear-gradient(45deg, #797979 0%, #595959 100%);
 }
 
-table {
-    border: solid 1px #000000;
-    border-collapse: collapse;
-    position: center;
-    background-color: #EEEEEE;
+.part{
+    margin:auto;
+    border: 1px #000000 solid;
+    border-collapse:collapse;
+    background-color:#EEEEEE;
 }
-
-tr:nth-child(odd) {
+.part tr:nth-child(odd){
     background-color: #D9E5FF;
 }
 
 th, td {
     padding: 5px 15px;
 }
+
