--- a/web/LoginDesign.css
+++ b/web/LoginDesign.css
@@ -1,18 +1,26 @@
 body{
+    margin:0 0 0 0;
     background-color: #AAAAAA;
+
+}
+#window{
+    width:100%;
+    background-color: rgba(0,0,0,0);
+}
+#site-box{
+    text-align: center;
+    vertical-align: middle;
 }
 
-div{
-    margin-left:40%;
-}
 
 .btn_1{
-    margin-left:150px;
+    margin-top:20px;
     width:100px;
     display: inline-block;
     text-decoration: none;
+    font-size: 20px;
     color: #AA5500;
-    line-height: 25px;
+    line-height: 35px;
     border-radius: 5px;
     text-align: center;
     vertical-align: middle;
@@ -32,13 +40,14 @@ div{
     background-image: linear-gradient(#9CDAFD 0%, #3DB9FD 100%);/*グラデーションを明るく*/
 }
 
-table{
+table #part{
+    margin:auto;
     width:400px;
     border: 1px #000000 solid;
     border-collapse:collapse;
     background-color:#EEEEEE;
 }
-tr:nth-child(odd){
+#part tr:nth-child(odd){
     background-color: #D9E5FF;
 }
 th,td{
