--- a/web/CourseRegistrationDesign.css
+++ b/web/CourseRegistrationDesign.css
@@ -10,18 +10,6 @@ form{
     width:100%;
     background-color: rgba(0,0,0,0);
 }
-#subwindow{
-    width:100%;
-    background-color: rgba(0,0,0,0);
-}
-.a-box{/*仮想親テーブルのTOPセル*/
-    width:100px;
-    vertical-align: top;
-}
-.b-box{/*仮想親テーブルのBOTTOMセル*/
-    width:100px;
-    vertical-align: bottom;
-}
 .c-box{/*仮想親テーブルのmainセル*/
     text-align: center;
     vertical-align: middle;
@@ -36,15 +24,6 @@ form{
     height: 50px;
     text-align: right;
 }
-.inline-box{
-    display: inline-block;
-    vertical-align: middle;
-}
-.inline-link{
-    display: inline;
-    vertical-align: middle;
-}
-
 
 h1{
     margin-top:50px;
@@ -79,27 +58,8 @@ h1{
 }
 
 .btn_2 {
-    margin:5px 5px;
-    width:200px;
-    height: 100px;
-    font-size: 20px;
-    display: inline-block;
-    text-decoration: none;
-    background: #f7f7f7;
-    border-left: solid 6px #EEEE88; /*左線*/
-    color: #FF7732; /*文字色*/
-    font-weight: bold;
-    box-shadow: 3px 5px 0px rgba(0, 0, 0, 0.30);
-}
-
-.btn_2:active {
-    box-shadow: inset 0 0 5px rgba(128, 128, 128, 0.1);
-    transform: translateY(2px);
-}
-
-.btn_3 {
-    width: 150px;
-    height: 80px;
+    width: 80px;
+    height: 50px;
     margin:50px 5px;
     font-size: 20px;
     display: inline-block;
@@ -112,7 +72,7 @@ h1{
     box-shadow: 2.5px 3.5px 0px rgba(0, 0, 0, 0.30);
 }
 
-.btn_3:active { /*押したとき*/
+.btn_2:active { /*押したとき*/
     border: double 6px #A00000;
     -ms-transform: translateY(2px);
     -webkit-transform: translateY(2px);
@@ -121,7 +81,27 @@ h1{
     background-image: -webkit-linear-gradient(#BBBBBB 0%, #9A9A9A 100%);
 
 }
+.btn_3 {
+    width: 80px;
+    height: 50px;
+    font-size: 16px;
+    margin:5px 5px;
+    display: inline-block;
+    text-decoration: none;
+    background: #CFCFCF; /*背景色*/
+    color: #00BCD4; /*=背景色*/
+    box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2);
+    border-bottom: solid 2px #118e9e;
+    border-radius: 4px;
+    font-weight: bold;
+    text-shadow: -1px -1px rgba(207, 207, 207, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+}
 
+.btn_3:active { /*押したとき*/
+    border-bottom: solid 2px #00BCD4;
+    box-shadow: none;
+    text-shadow: -1px -1px rgba(255, 255, 255, 0.3), 1px 1px rgba(0, 0, 0, 0.3);
+}
 .btn_4 {
     width: 150px;
     height: 80px;
@@ -148,44 +128,6 @@ h1{
     background-image: -webkit-linear-gradient(#BBBBBB 0%, #9A9A9A 100%);
 }
 
-.btn_5 {
-    width: 150px;
-    height: 80px;
-    font-size: 16px;
-    margin:5px 5px;
-    display: inline-block;
-    text-decoration: none;
-    background: #CFCFCF; /*背景色*/
-    color: #00BCD4; /*=背景色*/
-    box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2);
-    border-bottom: solid 2px #118e9e;
-    border-radius: 4px;
-    font-weight: bold;
-    text-shadow: -1px -1px rgba(207, 207, 207, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
-}
-
-.btn_5:active { /*押したとき*/
-    border-bottom: solid 2px #00BCD4;
-    box-shadow: none;
-    text-shadow: -1px -1px rgba(255, 255, 255, 0.3), 1px 1px rgba(0, 0, 0, 0.3);
-}
-.btn_6{
-    margin:5px 5px;
-    display: inline-block;
-    padding: 4px 8px;
-    border-radius: 25px;
-    text-decoration: none;
-    color: #FFF;
-    background-image: -webkit-linear-gradient(45deg, #FFC107 0%, #ff8b5f 100%);
-    background-image: linear-gradient(45deg, #A9A9A9 0%, #B9B9B9 100%);
-    transition: .4s;
-
-}
-.btn_6:active{/*押したとき*/
-    background-image: -webkit-linear-gradient(45deg, #FFC107 0%, #f76a35 100%);
-    background-image: linear-gradient(45deg, #797979 0%, #595959 100%);
-}
-
 .part{
     margin:auto;
     border: 1px #000000 solid;
@@ -195,8 +137,10 @@ h1{
 .part tr:nth-child(odd){
     background-color: #D9E5FF;
 }
+.ts{
+    width: 15%;
+}
 
 th, td {
     padding: 5px 15px;
 }
-
